force-app/main/default/objects/JBCXM__ScorecardHistory__c/JBCXM__ScorecardHistory__c.object-meta.xml
<CustomObject>
    <label>Scorecard History</label>
    <nameField>
        <displayFormat>SCH-{0000}</displayFormat>
        <label>Scorecard History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scorecard History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>