force-app/main/default/objects/JBCXM__ScorecardHistory__c/fields/JBCXM__LogDate__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LogDate__c</fullName>
    <label>Log Date</label>
    <type>DateTime</type>
</CustomField>