force-app/main/default/objects/JBCXM__ScorecardHistory__c/fields/JBCXM__Metric__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Metric__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scorecard Metric</label>
    <referenceTo>JBCXM__ScorecardMetric__c</referenceTo>
    <relationshipLabel>Scorecard History</relationshipLabel>
    <relationshipName>Scorecard_History</relationshipName>
    <type>Lookup</type>
</CustomField>