force-app/main/default/objects/JBCXM__ScorecardHistory__c/fields/JBCXM__ScoreId__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__ScoreId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Score Id</label>
    <referenceTo>JBCXM__ScoringSchemeDefinition__c</referenceTo>
    <relationshipLabel>Scorecard History</relationshipLabel>
    <relationshipName>ScorecardHistory</relationshipName>
    <type>Lookup</type>
</CustomField>