force-app/main/default/objects/JBCXM__ScorecardHistory__c/fields/JBCXM__Snapshot__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Snapshot__c</fullName>
    <label>Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>