force-app/main/default/objects/JBCXM__ScorecardHistory__c/fields/JBCXM__User__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Scorecard_History</relationshipName>
    <type>Lookup</type>
</CustomField>